# term-squire

./: Cargo.toml  README.md  example.mtf
.gitea/: deploy-term-squire-nginx.yaml
.gitea/workflows/: deploy-term-squire-nginx.yaml
src/: main.rs
src/lib/: constants.rs  import.rs  init.rs  lib.rs  logging.rs
src/lib/dictionary/: database.rs  handlers.rs
src/lib/import/: parse.rs  process.rs
templates/: base.html  database_management.html  import_form.html  insert_form.html  search_form.html  settings.html  term_detail.html  terms.html
tests/: database_tests.rs
