[package]
name = "term-squire"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.12.1"
axum = { version = "0.7.4", features = ["multipart"] }
chrono = "0.4.26"
clap = { version = "4.5.11", features = ["derive"] }
display_derive = "0.0.0"
elementtree = "1.2.3"
filters = "0.4.0"
futures = "0.3.30"
lazy_static = "1.5.0"
rust-fuzzy-search = "0.1.1"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.163"
serde_json = "1.0.120"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
xml2json-rs = "1.0.1"

[lib]
name = "term_squire"
path = "src/lib/lib.rs"
