[package]
name = "term-squire"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow ="1.0.98"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["macros","multipart"] }
chrono = "0.4.38"
clap = { version = "4.5.22", features = ["derive"] }
display_derive = "0.0.0"
elementtree = "1.2.3"
filters = "0.4.0"
futures = "0.3.31"
lazy_static = "1.5.0"
rust-fuzzy-search = "0.1.1"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_derive = "1.0.215"
serde_json = "1.0.133"
tempfile = "3.20.0"
tokio = { version = "1.46.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
xml2json-rs = "1.0.1"

[lib]
name = "term_squire"
path = "src/lib/lib.rs"
